@@ -1,0 +1,59 @@
+Summary: Glib Perl module
+Name: perl-Glib
+Version: @VERSION@
+Release: 1
+Packager: gtk-perl-list@gnome.org
+License: LGPL
+Group: Development/Libraries
+URL: http://search.cpan.org/dist/Glib/
+BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root
+BuildRequires: perl >= 2:5.8.0
+BuildRequires: glib2-devel >= 2.2.0
+BuildRequires: perl-ExtUtils-Depends >= 0.103
+Requires: glib2 >= 2.2.0
+Requires: %(perl -MConfig -le 'if (defined $Config{useithreads}) { print "perl(:WITH_ITHREADS)" } else { print "perl(:WITHOUT_ITHREADS)" }')
+Requires: %(perl -MConfig -le 'if (defined $Config{usethreads}) { print "perl(:WITH_THREADS)" } else { print "perl(:WITHOUT_THREADS)" }')
+Requires: %(perl -MConfig -le 'if (defined $Config{uselargefiles}) { print "perl(:WITH_LARGEFILES)" } else { print "perl(:WITHOUT_LARGEFILES)" }')
+Source0: @SOURCE@
+
+%description
+This module provides perl access to GLib and GLib's GObject libraries.  GLib is
+a portability and utility library; GObject provides a generic type system with
+inheritance and a powerful signal system.  Together these libraries are used as
+the foundation for many of the libraries that make up the Gnome environment,
+and are used in many unrelated projects.
+
+%prep
+%setup -q -n Glib-%{version}
+
+%build
+CFLAGS="$RPM_OPT_FLAGS" perl Makefile.PL PREFIX=$RPM_BUILD_ROOT%{_prefix} 
+make OPTIMIZE="$RPM_OPT_FLAGS"
+make test
+
+%install
+rm -rf $RPM_BUILD_ROOT
+eval `perl '-V:installarchlib'`
+mkdir -p $RPM_BUILD_ROOT$installarchlib
+%makeinstall
+rm -f `find $RPM_BUILD_ROOT -type f -name perllocal.pod -o -name .packlist`
+
+[ -x %{_libdir}/rpm/brp-compress ] && %{_libdir}/rpm/brp-compress
+
+find $RPM_BUILD_ROOT%{_prefix} -type f -print | \
+	sed "s@^$RPM_BUILD_ROOT@@g" > %{name}-%{version}-%{release}-filelist
+if [ "$(cat %{name}-%{version}-%{release}-filelist)X" = "X" ] ; then
+    echo "ERROR: EMPTY FILE LIST"
+    exit 1
+fi
+
+%clean
+rm -rf $RPM_BUILD_ROOT
+
+%files -f %{name}-%{version}-%{release}-filelist
+%defattr(-,root,root,-)
+
+%changelog
+* Thu Sep 04 2003 gtk-perl-list@gnome.org - 0.97-8
+- Specfile autogenerated.
+
